# crewai_chat_web_two_agents

./: .gitignore  README.md  informe.txt  pyproject.toml
src/proyecto_tool/: crew.py  main.py
src/proyecto_tool/apis/: init_api.py
src/proyecto_tool/config/: tasks.yaml
src/proyecto_tool/static/: index.html
