[project]
name = "proyecto_tool"
version = "0.1.0"
description = "proyecto_tool using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0"
]

[project.scripts]
proyecto_tool = "proyecto_tool.main:run"
run_crew = "proyecto_tool.main:run"
train = "proyecto_tool.main:train"
replay = "proyecto_tool.main:replay"
test = "proyecto_tool.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
